apps/minecraft/the-intersect/test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-test-bluemap
  namespace: minecraft
spec:
  parentRefs:
    - name: external-gateway-https
      namespace: cilium-ingress
  hostnames:
    - ${SUB_COMPASS_LANTERN}.${DOMAIN_CORONET_SUMMIT}
  rules:
    - backendRefs:
        - name: minecraft-test
          port: 8100
